--- a/index.html
+++ b/index.html
@@ -11,45 +11,76 @@
     <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@500;700&display=swap" rel="stylesheet" />
 </head>
 <body>
-    <section class="notification-panel">
+        <section class="notification-panel">
         <div class="container">
             <h1 class="hidden">Notifications</h1>
-            <div class="notifications-panel-header">
-                <div class="notifications-panel-content">
-                    <div class="notifications-panel-title">Notifications</div>
-                    <div class="notifications-panel-count">3</div>
-                </div>
-                <button class="notifications-panel-mark-read">Mark all as read</button>
+          <div class="notifications-panel-header">
+            <div class="notifications-panel-content">
+              <div class="notifications-panel-title">Notifications</div>
+              <div class="notifications-panel-count">3</div>
             </div>
+            <button class="notifications-panel-mark-read">Mark all as read</button>
+          </div>
 
-            <ul class="notification-list">
-                <!-- ... -->
-                <li class="notification-item" data-name="Kimberly Smith">
-                    <img class="notification-profile" src="assets/images/avatar-kimberly-smith.webp" width="50" height="50" alt="Kimberly Smith's profile picture">
-                    <div class="notification-content">
-                        <p class="notification-title"><a>Kimberly Smith</a> commented on your picture</p>
-                        <p class="notification-description">1 week ago</p>
-                    </div>
-                    <div class="notification-image">
-                        <img src="assets/images/image-chess.webp" width="50" height="50" alt="Your image description">
-                    </div>
-                </li>
-                <li class="notification-item" data-name="Nathan Peterson">
-                    <img class="notification-profile" src="assets/images/avatar-nathan-peterson.webp" width="50" height="50" alt="Nathan Peterson's profile picture">
-                    <div class="notification-content">
-                        <p class="notification-title"><a>Nathan Peterson</a> reacted to your recent post <a>5 end-game strategies to increase your win rate</a></p>
-                        <p class="notification-description">2 weeks ago</p>
-                    </div>
-                </li>
-                <li class="notification-item" data-name="Anna Kim">
-                    <img class="notification-profile" src="assets/images/avatar-anna-kim.webp" width="50" height="50" alt="Anna Kim's profile picture">
-                    <div class="notification-content">
-                        <p class="notification-title"><a>Anna Kim</a> left the group <a class="group-link">Chess Club</a></p>
-                        <p class="notification-description">2 weeks ago</p>
-                    </div>
-                </li>
-            </ul>
+          <ul class="notification-list">
+            <li class="notification-item active" data-name="Mark Webber">
+              <img class="notification-profile" src="assets/images/avatar-mark-webber.webp" width="50" height="50" alt="Mark Webber's profile picture" />
+              <div class="notification-content">
+                <p class="notification-title"><a>Mark Webber</a> reacted to your recent post <a>My first tournament today!</a><span class="unread-indicator"></span></p>
+                <p class="notification-description">1m ago</p>
+              </div>
+            </li>
+            <li class="notification-item active" data-name="Angela Gray">
+              <img class="notification-profile" src="assets/images/avatar-angela-gray.webp" width="50" height="50" alt="Angela Gray's profile picture" />
+              <div class="notification-content">
+                <p class="notification-title"><a>Angela Gray</a> followed you<span class="unread-indicator"></span></p>
+                <p class="notification-description">5m ago</p>
+              </div>
+            </li>
+            <li class="notification-item active" data-name="Jacob Thompson">
+              <img class="notification-profile" src="assets/images/avatar-jacob-thompson.webp" width="50" height="50" alt="Jacob Thompson's profile picture" />
+              <div class="notification-content">
+                <p class="notification-title"><a>Jacob Thompson</a> has joined your group <a class="group-link">Chess Club</a><span class="unread-indicator"></span></p>
+                <p class="notification-description">1 day ago</p>
+              </div>
+            </li>
+            <li class="notification-item" data-name="Rizky Hasanuddin">
+              <img class="notification-profile" src="assets/images/avatar-rizky-hasanuddin.webp" width="50" height="50" alt="Rizky Hasanuddin's profile picture" />
+              <div class="notification-content">
+                <p class="notification-title"><a>Rizky Hasanuddin</a> sent you a private message</p>
+                <p class="notification-description">5 days ago</p>
+                <div class="notification-comment">Hello, thanks for setting up the Chess Club. I've been a member for a few weeks now and I'm already having lots of fun and improving my game.</div>
+              </div>
+            </li>
+            <li class="notification-item" data-name="Kimberly Smith">
+              <img class="notification-profile" src="assets/images/avatar-kimberly-smith.webp" width="50" height="50" alt="Kimberly Smith's profile picture" />
+              <div class="notification-content">
+                <p class="notification-title"><a>Kimberly Smith</a> commented on your picture</p>
+                <p class="notification-description">1 week ago</p>
+              </div>
+              <div class="notification-image">
+                <img src="assets/images/image-chess.webp" width="50px" height="50px" alt="Groups profile image" />
+              </div>
+            </li>
+
+            <li class="notification-item" data-name="Nathan Peterson">
+              <img class="notification-profile" src="assets/images/avatar-nathan-peterson.webp" width="50" height="50" alt="Nathan Peterson's profile picture"/>
+              <div class="notification-content">
+                <div class="notification-content">
+                  <p class="notification-title"><a>Nathan Peterson</a> reacted to your recent post <a>5 end-game strategies to increase your win rate</a></p>
+                  <p class="notification-description">2 weeks ago</p>
+                </div>
+              </div>
+            </li>
+            <li class="notification-item" data-name="Anna Kim">
+              <img class="notification-profile" src="assets/images/avatar-anna-kim.webp" width="50" height="50" alt="Anna Kims's profile picture"/>
+              <div class="notification-content">
+                <p class="notification-title"><a>Anna Kim</a> left the group <a class="group-link">Chess Club</a></p>
+                <p class="notification-description">2 weeks ago</p>
+              </div>
+            </li>
+          </ul>
         </div>
-    </section>
+      </section>
 </body>
 </html>
