--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
         <section class="notification-panel">
         <div class="container">
-            <h1 class="hidden">Notifications</h1>
+            <h1 style="display: none;">Notifications</h1>
           <div class="notifications-panel-header">
             <div class="notifications-panel-content">
               <div class="notifications-panel-title">Notifications</div>
